Set both left and right wxTextEntry margins in wxMSW.

Use the horizontal margin argument of SetMargins() to set both left and right
margins in wxMSW and not just the left one.

See #14958.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@73390 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775